<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_normal">

    <!--    <TextView-->
    <!--        android:id="@+id/nmedia"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/nmedia"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_avatar_drawable_48dp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_normal"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_normal"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/ic_baseline_more_vert_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_normal"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="64dp" />

    <TextView
        android:id="@+id/content"
        android:layout_margin="@dimen/padding_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="233dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        android:fontFamily="sans-serif"
        android:scaleType="center"
        app:icon="@drawable/ic_likes_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_lower"
        tools:checked="true"
        tools:text="548" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_share"
        android:fontFamily="sans-serif"
        android:scaleType="center"
        app:icon="@drawable/ic_baseline_share_24dp"
        app:layout_constraintEnd_toStartOf="@id/views"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/barrier_lower"
        tools:checked="true"
        tools:text="387" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contentDescription="@string/description_post_views"
        android:fontFamily="sans-serif"
        android:scaleType="center"
        app:icon="@drawable/ic_baseline_views_remove_red_eye_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_lower"
        tools:checked="true"
        tools:text="999" />


</androidx.constraintlayout.widget.ConstraintLayout>